# letsgamble

./: .env.example  README.md  pyproject.toml
config/: strategies.yaml
scripts/: run_paper.sh
src/: main.py
src/agent/: service.py
src/evaluation/: service.py
src/exchange/: ibkr.py
src/models/: types.py
src/rules/: indicators.py  service.py
